style.css
/* html{
  scroll-behavior:smooth;
} */

*{
  margin:0;
  padding:0;
  box-sizing:border-box;
}

body{
  font-family:Arial, sans-serif;
  background:#0f172a;
  color:white;
}

/* NAVBAR */

.navbar{
  width:100%;
  display:flex;
  justify-content:space-between;
  align-items:center;
  padding:24px 80px;
}

.logo{
  font-size:28px;
  font-weight:700;
}

.nav-links{
  display:flex;
  gap:30px;
  list-style:none;
}

.nav-links a{
  color:white;
  text-decoration:none;
  font-size:15px;
  transition:0.3s;
}

.nav-links a:hover{
  color:#5563F7;
}

.nav-btn{
  height:45px;
  padding:0 22px;
  border:none;
  border-radius:10px;
  background:#5563F7;
  color:white;
  cursor:pointer;
  transition:0.3s;
}

.nav-btn:hover{
  transform:translateY(-4px);
  box-shadow:0 10px 30px rgba(85,99,247,0.3);

} 


/* HERO */

.hero{
  flex-direction:column;
  justify-content:center;
  align-items:center;
  text-align:center;

  padding:110px 20px 60px;

  min-height:auto;

  gap:40px;
}

.hero-left{
  flex:1;
  min-height: 320px;
  animation:fadeUp 1s ease;
}
#typing-title{
  display: inline-block;
}

.hero-left h1{
  font-size:72px;
  line-height:1.1;
  margin-bottom:24px;
}

.hero-left p{
  font-size:18px;
  color:#cbd5e1;
  line-height:32px;
  max-width:550px;
  margin-bottom:30px;
}

.hero-buttons{
  display:flex;
  gap:16px;
}

.primary-btn,
.secondary-btn{
  height:54px;
  padding:0 28px;
  border:none;
  border-radius:14px;
  cursor:pointer;
  font-size:15px;
  font-weight:600;
  transition:0.3s;
}

.primary-btn{
  background:#5563F7;
  color:white;
}

.secondary-btn{
  background:white;
  color:#111;
}

.primary-btn:hover,
.secondary-btn:hover,
.cta-btn:hover{
  transform:translateY(-5px);
  box-shadow:0 10px 25px rgba(85,99,247,0.4);
}

/* HERO RIGHT */

.hero-right{
  flex:1;
  display:flex;
  justify-content:center;
  animation:fadeUp 1.3s ease;
}

.ai-card{
  width:320px;
  background:rgba(255,255,255,0.08);
  border:1px solid rgba(255,255,255,0.1);
  backdrop-filter:blur(10px);
  padding:40px;
  border-radius:24px;
  transition:0.3s;
  cursor:pointer;
}

.ai-card:hover{
  transform:translateY(-10px);
  box-shadow:0 10px 30px rgba(85,99,247,0.3);
  background:rgba(255,255,255,0.12);
}

.ai-card h3{
  font-size:28px;
  margin-bottom:16px;
}

.ai-card p{
  color:#cbd5e1;
}

/* FEATURES */

.features{
  width:100%;
  padding:100px 80px;
  text-align:center;
}

.features h2{
  font-size:48px;
  margin-bottom:50px;
}

.feature-grid{
  display:grid;
  grid-template-columns:repeat(3,1fr);
  gap:24px;
}

.feature-card{
  background:rgba(255,255,255,0.05);
  border:1px solid rgba(255,255,255,0.08);
  padding:40px 28px;
  border-radius:24px;
  transition:0.3s;
}

.feature-card:hover{
  transform:translateY(-10px);
  background:rgba(255,255,255,0.08);
  box-shadow:0 10px 30px rgba(85,99,247,0.3);
}

.feature-card h3{
  font-size:24px;
  margin-bottom:18px;
}

.feature-card p{
  color:#cbd5e1;
  line-height:28px;
}

/* STATS SECTION */

.stats-section{
  width:100%;
  padding:100px 80px;
  text-align:center;
}

.stats-section h2{
  font-size:48px;
  margin-bottom:20px;
}

.stats-section p{
  color:#cbd5e1;
  max-width:700px;
  margin:auto;
  line-height:30px;
  margin-bottom:50px;
}

.stats{
  display:grid;
  grid-template-columns:repeat(3,1fr);
  gap:24px;
}

.stat-box{
  background:rgba(255,255,255,0.05);
  border:1px solid rgba(255,255,255,0.08);
  padding:40px;
  border-radius:24px;
  transition:0.3s;
}

.stat-box:hover{
  transform:translateY(-8px);
  box-shadow:0 10px 30px rgba(85,99,247,0.3);
  background:rgba(255,255,255,0.12);
}


.stat-box h3{
  font-size:48px;
  color:#5563F7;
  margin-bottom:14px;
}

.stat-box p{
  color:#cbd5e1;
}

/* TESTIMONIALS */

.testimonials{
  width:100%;
  padding:100px 80px;
  text-align:center;
}

.testimonials h2{
  font-size:48px;
  margin-bottom:50px;
}

.testimonial-grid{
  display:grid;
  grid-template-columns:repeat(2,1fr);
  gap:24px;
}

.testimonial-card{
  background:rgba(255,255,255,0.05);
  border:1px solid rgba(255,255,255,0.08);
  padding:40px;
  border-radius:24px;
  transition:0.3s;
}

.testimonial-card:hover{
  transform:translateY(-8px);
  /* transform:translateY(-10px); */
  box-shadow:0 10px 30px rgba(85,99,247,0.3);
  background:rgba(255,255,255,0.12);

}

.testimonial-card p{
  color:#cbd5e1;
  line-height:30px;
  margin-bottom:20px;
}

.testimonial-card h4{
  color:#5563F7;
}

/* CTA */

.cta{
  width:100%;
  padding:100px 20px;
  text-align:center;
}

.cta h2{
  font-size:52px;
  margin-bottom:20px;
}

.cta p{
  color:#cbd5e1;
  max-width:700px;
  margin:auto;
  line-height:30px;
  margin-bottom:30px;
}

.cta-btn{
  height:56px;
  padding:0 34px;
  border:none;
  border-radius:14px;
  background:#5563F7;
  color:white;
  font-size:16px;
  font-weight:600;
  cursor:pointer;
  transition:0.3s;
}

/* FOOTER */

.footer{
  width:100%;
  padding:40px 20px;
  border-top:1px solid rgba(255,255,255,0.08);
  text-align:center;
  padding-top: 60px;
}

.footer h3{
  font-size:28px;
  margin-bottom:12px;
}

.footer p{
  color:#94a3b8;
}

/* MENU */

.menu-toggle{
  display:none;
  font-size:32px;
  cursor:pointer;
}

/* SCROLL FIX */


/* ANIMATION */

@keyframes fadeUp{
  from{
    opacity:0;
    transform:translateY(40px);
  }

  to{
    opacity:1;
    transform:translateY(0);
  }
}

/* ================= MOBILE RESPONSIVE FINAL ================= */

@media(max-width:768px){

 
  /* NAVBAR */

  .navbar{
    padding:20px;
    position:fixed;
    top:0;
    left:0;
    width:100%;
    background:#0f172a;
    z-index:9999;
  }

  .logo{
    font-size:24px;
  }

  .menu-toggle{
    display:block;
  }

  .nav-links{
    display:none;

    flex-direction:column;

    position:absolute;

    top:75px;
    left:0;

    width:100%;

    background:#111827;

    padding:20px;

    gap:20px;

    text-align:center;
  }

  .nav-links.active{
    display:flex;
  }

  .nav-btn{
    display:none;
  }

  /* HERO */

  .hero{
    flex-direction:column;

    justify-content:center;

    align-items:center;

    text-align:center;

    padding:140px 20px 60px;

    min-height:auto;

    gap:40px;
  }

  .hero-left{
    width:100%;
  }

  .hero-left h1{
    font-size:48px;
    line-height:1.2;
    margin-bottom:20px;
  }

  .hero-left p{
    font-size:16px;
    line-height:30px;
    max-width:100%;
    margin-bottom:30px;
  }

  .hero-buttons{
    flex-direction:column;
    width:100%;
  }

  .primary-btn,
  .secondary-btn{
    width:100%;
  }

  .hero-right{
    width:100%;
    display:flex;
    justify-content:center;
  }

  .ai-card{
    width:100%;
    max-width:350px;
  }

  /* FEATURES */

  .features{
    padding:80px 20px;
  }

  .features h2{
    font-size:36px;
    margin-bottom:40px;
  }

  .feature-grid{
    grid-template-columns:1fr;
  }

  .feature-card{
    min-height:auto;
  }

  /* STATS */

  .stats-section{
    padding:80px 20px;
    text-align:center;
  }

  .stats-section h2{
    font-size:36px;
    margin-bottom:20px;
  }

  .stats-section p{
    margin-bottom:40px;
    line-height:28px;
  }

  .stats{
    grid-template-columns:1fr;
    padding:0;
  }

  .stat-box{
    min-height:auto;
  }

  /* TESTIMONIALS */

  .testimonials{
    padding:80px 20px;
  }

  .testimonials h2{
    font-size:36px;
    margin-bottom:40px;
  }

  .testimonial-grid{
    grid-template-columns:1fr;
  }

  /* CTA */

  .cta{
    padding:80px 20px;
  }

  .cta h2{
    font-size:36px;
    line-height:1.3;
  }

  /* FOOTER */

  .footer{
    padding:50px 20px;
  }

  /* SCROLL FIX */

  #home,
  #features,
  #stats,
  #about,
  #contact{
    scroll-margin-top:100px;
  }
  html,
  body {
   overflow-x:hidden;
  } 

}

